# navrs

./: Cargo.toml
Specs/: Prd.md
src/: main.rs
src/core/: controller.rs  engine.rs  mod.rs  planner.rs  types.rs
src/ui/: mod.rs
