[package]
name = "navrs"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.14.2", default-features = false, features = ["bevy_asset", "bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_text", "bevy_ui", "multi_threaded", "png", "x11"] }
bevy_egui = "0.30.0"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"
